쿼리dsl 빌드중 오류 확인